fix: avoid gap above hero image

--- a/assets/styles/claris/_components_screen.scss
+++ b/assets/styles/claris/_components_screen.scss
@@ -656,6 +656,7 @@
       &_main &_figure {
         display: block;
         position: sticky;
+        top: unset;
         bottom: 0;
         margin: 0;
         padding: 0;
